fixed on mobile?

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -96,7 +96,7 @@ main div {
     border:2px solid black;
     width:80%;
     // margin:3vh auto;
-    margin:3vh;
+    margin:2.5vh;
     border-radius: 1vh;
     flex: 1 1 450px;
     display:flex;
